# plsm

./: .clang-format  CMakeLists.txt  LICENSE  README.md  config.h.in
CMake/: FindKokkos.cmake  plsm-config.cmake  plsm-config.cmake.in  plsmConfig.cmake.in
doc/: CMakeLists.txt
include/plsm/: CompactFlat.h  ContextUtility.h  EnumIndexed.h  Interval.h  IntervalRange.h  MultiIndex.h  Region.h  Region.inl  Segment.h  SpaceVector.h  Subpaving.h  Subpaving.inl  Tile.h  Utility.h  Zone.h
include/plsm/detail/: EnumIndexed.h  KokkosExtension.h  Refiner.h  Refiner.inl  SpaceVectorBase.h  SubdivisionInfo.h
include/plsm/refine/: BallDetector.h  Detector.h  MultiDetector.h  PolylineDetector.h  RegionDetector.h
test/: CMakeLists.txt  benchmark_Subpaving.cpp  test_CompactFlat.cpp  test_Detectors.cpp  test_Interval.cpp  test_IntervalRange.cpp  test_MultiIndex.cpp  test_Region.cpp  test_Segment.cpp  test_SpaceVector.cpp  test_Subpaving.cpp  test_Tile.cpp  test_Zone.cpp  test_main.cpp  unittest_CompactFlat.cpp  unittest_Detectors.cpp  unittest_EnumIndexed.cpp  unittest_Interval.cpp  unittest_IntervalRange.cpp  unittest_MultiIndex.cpp  unittest_Region.cpp  unittest_Segment.cpp  unittest_SpaceVector.cpp  unittest_Subpaving.cpp  unittest_Tile.cpp  unittest_Zone.cpp
test/include/plsm/: KokkosContext.h  PrintSubpaving.h  RenderSubpaving.h  TestingCommon.h
